--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -95,3 +95,9 @@
   text-align: center;
   font-size: 0.9rem;
 }
+
+.ftfimg {
+  text-align: center;
+  align-items: center;
+  margin-left: 32rem;
+}
