--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -97,7 +97,6 @@
 }
 
 .ftfimg {
-  text-align: center;
-  align-items: center;
-  margin-left: 32rem;
+  display: flex;
+  justify-content: center;
 }
